syntax = "proto3";

package inventory;

message InventoryRecord {
    string inventory_id = 1;
    string name = 2;
    string description = 3;
    int32 unit_price = 4;
    int32 quantity_in_stock = 5;
    int32 inventory_value = 6;
    int32 reorder_level = 7;
    int32 reorder_time_in_days = 8;
    int32 quantity_in_reorder = 9;
    string discontinued = 10;
}
message SearchReq {
    string key_name = 1;
    string key_value = 2;
}
message SearchRes {
    InventoryRecord inventory_record = 1;
}
message RangeRes {
    repeated InventoryRecord inventory_record = 1;
}
message RangeReq {
    string key_name = 1;
    int32 key_start = 2;
    int32 key_end = 3;
}
message DistRes {
    repeated InventoryRecord inventory_record = 1;
}
message DistReq {
    string key_name = 1;
    double percentile = 2;
}
message UpdateReq {
    string key_name = 1;
    string key_value = 2;
    string val_name = 3;
    string val_value_new = 4;
}

service Inventory {
    // Service method to search by ID
    rpc SearchByID (InventoryRecord) returns (InventoryRecord);

    // Service method to search based on key and value
    rpc Search (SearchReq )returns (SearchRes);

    // Service method to search based on key, start, and end values
    rpc SearchRange (RangeReq) returns (RangeRes);

    // Service method to get the distribution percentile for a given key
    rpc GetDistribution (DistReq) returns (DistRes);

    // Service method to update a record
    rpc Update (UpdateReq) returns (InventoryRecord);
}
